wip - plot DSAR and apply HP filter

--- a/main.ipynb
+++ b/main.ipynb
@@ -230,15 +230,13 @@
     "        freq = \"{}ms\".format(stream[0].stats.delta*1000)\n",
     "    )\n",
     "    \n",
-    "    series = pd.Series(\n",
+    "    _series = pd.Series(\n",
     "        data=np.abs(stream[0].data),\n",
     "        index=index_time,\n",
     "        name=stream[0].id,\n",
     "        dtype=stream[0].data.dtype)\n",
     "    \n",
-    "    # print(series)\n",
-    "    \n",
-    "    return series.resample(resample_rule).median()"
+    "    return _series.resample(resample_rule).median()"
    ]
   },
   {
@@ -343,6 +341,16 @@
    "execution_count": 10
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Combining CSV files per band and station"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ecf281ea66334041"
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [
@@ -353,7 +361,7 @@
     "    df_list: list = []\n",
     "    \n",
     "    wildcard: str = '-'.join(map(str,bands[band]))\n",
-    "    csv_files = glob.glob(os.path.join(\n",
+    "    csv_files: list[str] = glob.glob(os.path.join(\n",
     "        output_directory, band, \"{}Hz_*_{}.csv\".format(wildcard, station)))\n",
     "\n",
     "    for csv in csv_files:\n",
@@ -362,7 +370,9 @@
     "        \n",
     "    big_df = pd.concat(df_list, ignore_index=True)\n",
     "    \n",
-    "    combined_csv_files = os.path.join(output_directory, band,\"combined_{}Hz_{}.csv\".format(wildcard, station))\n",
+    "    combined_csv_files: str = os.path.join(\n",
+    "        output_directory, band,\"combined_{}Hz_{}.csv\".format(wildcard, station))\n",
+    "    \n",
     "    big_df.to_csv(\n",
     "        combined_csv_files,\n",
     "        index=False, header=False)\n",
