wip: add output example

--- a/magma.ipynb
+++ b/magma.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-04-05T10:45:13.733206Z",
-     "start_time": "2024-04-05T10:45:13.723293Z"
-    },
     "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
+    },
+    "ExecuteTime": {
+     "end_time": "2024-04-05T12:14:20.811106Z",
+     "start_time": "2024-04-05T12:14:20.806594Z"
     }
    },
    "outputs": [],
@@ -33,10 +33,7 @@
      "end_time": "2024-04-05T10:45:13.748888Z",
      "start_time": "2024-04-05T10:45:13.734211Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -53,10 +50,7 @@
      "end_time": "2024-04-05T10:45:13.764582Z",
      "start_time": "2024-04-05T10:45:13.749985Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -75,10 +69,7 @@
      "end_time": "2024-04-05T10:45:13.779632Z",
      "start_time": "2024-04-05T10:45:13.766562Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -99,10 +90,7 @@
      "end_time": "2024-04-05T10:45:13.795285Z",
      "start_time": "2024-04-05T10:45:13.781646Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -121,10 +109,7 @@
      "end_time": "2024-04-05T10:45:13.811024Z",
      "start_time": "2024-04-05T10:45:13.797282Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -142,10 +127,7 @@
      "end_time": "2024-04-05T10:45:16.245146Z",
      "start_time": "2024-04-05T10:45:13.813023Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -161,10 +143,7 @@
      "end_time": "2024-04-05T10:45:16.260809Z",
      "start_time": "2024-04-05T10:45:16.247133Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -180,10 +159,7 @@
      "end_time": "2024-04-05T10:45:16.276563Z",
      "start_time": "2024-04-05T10:45:16.262791Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -199,10 +175,7 @@
      "end_time": "2024-04-05T10:45:16.292185Z",
      "start_time": "2024-04-05T10:45:16.277547Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -325,10 +298,7 @@
      "end_time": "2024-04-05T10:45:16.307482Z",
      "start_time": "2024-04-05T10:45:16.294168Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -355,10 +325,7 @@
      "end_time": "2024-04-05T10:45:16.323451Z",
      "start_time": "2024-04-05T10:45:16.309164Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -464,10 +431,7 @@
      "end_time": "2024-04-05T10:45:16.338696Z",
      "start_time": "2024-04-05T10:45:16.324446Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -483,10 +447,7 @@
      "end_time": "2024-04-05T10:45:16.354008Z",
      "start_time": "2024-04-05T10:45:16.339702Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -503,10 +464,7 @@
      "end_time": "2024-04-05T10:56:28.432498Z",
      "start_time": "2024-04-05T10:56:26.249711Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -548,10 +506,7 @@
      "end_time": "2024-04-05T10:46:41.753767Z",
      "start_time": "2024-04-05T10:46:41.736109Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -567,10 +522,7 @@
      "end_time": "2024-04-05T10:47:27.205956Z",
      "start_time": "2024-04-05T10:47:27.197442Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -643,10 +595,7 @@
    "execution_count": null,
    "id": "d9525759e552019d",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
