wip: small update for cosmetic

--- a/dsar.ipynb
+++ b/dsar.ipynb
@@ -80,8 +80,10 @@
     "figures_directory: str = os.path.join(input_directory, \"figures\")\n",
     "os.makedirs(figures_directory, exist_ok=True)\n",
     "\n",
-    "combined_HF_csv: str = os.path.join(input_directory, \"HF\", 'combined_{}Hz_{}.csv'.format('-'.join(map(str,bands['HF'])), nslc))\n",
-    "combined_LF_csv: str = os.path.join(input_directory, \"LF\", 'combined_{}Hz_{}.csv'.format('-'.join(map(str,bands['LF'])), nslc))"
+    "combined_HF_csv: str = os.path.join(\n",
+    "    input_directory, \"HF\", 'combined_{}Hz_{}.csv'.format('-'.join(map(str,bands['HF'])), nslc))\n",
+    "combined_LF_csv: str = os.path.join(\n",
+    "    input_directory, \"LF\", 'combined_{}Hz_{}.csv'.format('-'.join(map(str,bands['LF'])), nslc))"
    ]
   },
   {
@@ -452,13 +454,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 143,
    "id": "75e068b0ead2b91c",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-05T21:46:43.869662Z",
-     "start_time": "2024-04-05T21:46:43.431059Z"
+     "end_time": "2024-04-05T22:04:52.456373Z",
+     "start_time": "2024-04-05T22:04:52.039229Z"
     }
    },
    "outputs": [
@@ -471,8 +473,9 @@
     }
    ],
    "source": [
+    "filename = 'DSAR_{}_{}-{}.png'.format(nslc, df.first_valid_index(), df.last_valid_index())\n",
     "fig.savefig(os.path.join(figures_directory, '{}.png'.format(nslc)))\n",
-    "print(\"✅ Saved figure {}\".format(os.path.join(figures_directory, '{}.png'.format(nslc))))"
+    "print(\"✅ Saved figure {}\".format(os.path.join(figures_directory, filename)))"
    ]
   },
   {
@@ -482,7 +485,8 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "1172a9439f2d9507"
+   "id": "1172a9439f2d9507",
+   "execution_count": null
   }
  ],
  "metadata": {
