--- a/main.ipynb
+++ b/main.ipynb
@@ -126,11 +126,13 @@
    },
    "outputs": [],
    "source": [
+    "# Named bands\n",
     "bands: dict[str, list[float]] = {\n",
     "    'HF' : [0.1, 8.0, 16.0],\n",
     "    'LF' : [0.1, 4.5, 8.0],\n",
     "}\n",
     "\n",
+    "# Resample parameter\n",
     "resample_rule: str = '10min'"
    ]
   },
