wip: update RSAM

--- a/plot.ipynb
+++ b/plot.ipynb
@@ -217,7 +217,7 @@
     "        axs[index_key].scatter(df.index, df.DSAR, c= 'k', alpha=0.3, s=10, label='10 minutes')\n",
     "        \n",
     "        # Smoothing using 24 Hour\n",
-    "        axs[index_key].plot(df.index, df.DSAR_24h, c='red', label='24h'.format(station), alpha=1)\n",
+    "        axs[index_key].plot(df.index, df.DSAR_24h, c='red', label='24h', alpha=1)\n",
     "        \n",
     "        # Using HP Filter. Uncomment to use HP filter.\n",
     "        # axs[index_key].plot(df.index, trend, c='red', label='24h'.format(station), alpha=1)\n",
