--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -29,12 +29,46 @@
     "    start_date=\"2024-01-01\",\n",
     "    end_date=\"2024-04-22\",\n",
     "    station=\"RUA3\",\n",
-    "    channel=\"EHZ\"\n",
+    "    channel=\"EHZ\",\n",
+    "    network=\"VG\",\n",
+    "    location=\"00\",\n",
+    "    verbose=True,\n",
+    "    debug=True,\n",
     ")"
    ],
    "id": "725ea6346babe205",
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Change the freq bands",
+   "id": "43131a79fd5596c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# \"LF\": [0.1, 4.5, 8.0]\n",
+    "dsar.first_bands(\n",
+    "    name=\"LF\",\n",
+    "    first_freq=0.1,\n",
+    "    second_freq=4.5,\n",
+    "    third_freq=8,\n",
+    ")\n",
+    "\n",
+    "# \"HF\": [0.1, 8.0, 16.0]\n",
+    "dsar.second_bands(\n",
+    "    name=\"HF\",\n",
+    "    first_freq=0.1,\n",
+    "    second_freq=8.0,\n",
+    "    third_freq=16,\n",
+    ")"
+   ],
+   "id": "a4fc801311207c43"
   },
   {
    "metadata": {},
